<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ClimApp</string>
    <string name="no_text" translatable="false"> </string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="clothing">Clothing</string>
    <string name="channel_name">"ClimApp"</string>
    <string name="channel_description" translatable="false">"WBGT value check"</string>
    <string name="welcome">Welcome!</string>
    <string name="justification">In order for the app to personalize the feedback provided to you,
        we recommend that you input your personal information. If you don\'t feel like doing so, the app will
        use predefined values instead.</string>
    <string name="onboarding_not_completed">Onboarding not completed, using default values in calculations.</string>
    <string name="climapp_team">- The ClimApp Team</string>
    <string name="before_set_up">Before we get going..</string>
    <string name="set_up">Let\'s get you started..</string>
    <string name="get_to_know">Getting to know you..</string>
    <string name="last_step">Last step</string>
    <string name="almost_done">Almost done..</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="activity_level">Activity level</string>
    <string name="activity_level_text">How will your activity level be today?</string>
    <string name="activity_level_very_low">Low-</string>
    <string name="activity_level_low">Low</string>
    <string name="activity_level_medium">Medium</string>
    <string name="activity_level_high">High</string>
    <string name="activity_level_very_high">High+</string>
    <string name="activity_description">Description of the different activity levels shown on click.</string>
    <string name="activity_very_low_text_short">Resting, sitting at ease.\nBreathing not challenged.</string>
    <string name="activity_low_text_short">Light manual work:\nwriting, typing, drawing, book-keeping.\nEasy to breathe and carry on a conversation. </string>
    <string name="activity_medium_text_short">Sustained arm and hand work: handling moderately heavy machinery, weeding, picking fruits.</string>
    <string name="activity_high_text_short">Intense arm and trunk work: carrying heavy material, shovelling, sawing, hand mowing, concrete block laying.</string>
    <string name="activity_very_high_text_short">Very intense activity at fast maximum pace:\nworking with an ax, climbing stairs,
        running on level surface.</string>
    <string name="activity_very_low_text">Resting, sitting at ease.\nBreathing not challenged.</string>
    <string name="activity_low_text">Light manual work:\nwriting, typing, drawing, book-keeping.\nLight manual arm work,
        standing drilling.\nCasual walking on level surface.\nEasy to breathe and carry on a conversation. </string>
    <string name="activity_medium_text">Sustained arm and hand work: handling moderately heavy machinery, weeding, picking fruits.  Pushing or pulling cart or wheelbarrow. Walking at a speed of 2.5 to 5.5 km/h. Can carry on a conversation but it requires more effort.</string>
    <string name="activity_high_text">Intense arm and trunk work:\ncarrying heavy material, shovelling, sawing, hand moving,
        concrete block laying.\nWalking fast at speed of 5.5 to 7 km/h.\nConversation requires maximum effort.</string>
    <string name="activity_very_high_text">Very intense activity at fast maximum pace:\nworking with an ax, climbing stairs,
        running on level surface.\nWalking at a speed greater than 7 km/h.\nDiffcult to speak.</string>
    <string name="heatStressLevel">Your expected heat-stress level</string>
    <string name="suggestion_text">Description of actions.</string>
    <string name="suggestion_green_top">No high heat expected</string>
    <string name="suggestion_green">Maintain normal working and hydration procedures.</string>
    <string name="suggestion_yellow_top">Moderate heat-stress is expected</string>
    <string name="suggestion_yellow">Pay extra attention to frequent drinking.</string>
    <string name="suggestion_red_top">High heat-stress is expected!</string>
    <string name="suggestion_red">Your water needs will be high.\nDrink frequently and remember to rehydrate after
        work/exercise.\nIf possible adjust work and include small breaks with cooling.</string>
    <string name="suggestion_dark_red_top">Extreme heat is expected!</string>
    <string name="suggestion_dark_red">If possible adjust work – use active cooling (schedule frequent breaks in shadow or cooled area where you can hydrate). Your water needs may be more than 1 liter/hour implying that you should drink often.  If possible add salt to your meals.</string>
    <string name="suggestion_default_top">Waiting for data</string>
    <string name="suggestion_default">No coping strategies ready.</string>
    <string name="location_error_text">Could not get device location. Make sure location is enabled on the device</string>
    <string name="location">Location</string>
    <string name="weather_current">Current</string>
    <string name="update_location">Update location</string>
    <string name="current_location">Current location</string>
    <string name="permission_denied">Permission to access location denied, nothing to show.</string>
    <string name="error_text_location">GPS or internet disabled. Please enable both and restart the app.</string>
    <string name="error">Error</string>
    <string name="explore_find_lonlat_txt">Find coordinates from city name here:\n <a href="http://www.latlong.net/">http://www.latlong.net/</a></string>
    <string name="missing_location_data">The application does not seem to have gathered any available location data, move your device.</string>
    <string name="internet_disabled">Internet Disabled</string>
    <string name="internet_disabled_message">No active Internet connection found. In order for the application to work properly, you need to enable internet on your device.</string>
    <string name="turn_on_wifi">Turn on Wifi</string>
    <string name="choice_return_button">Return to app</string>
    <string name="gps_turned_off">GPS turned off</string>
    <string name="gps_turned_off_message">GPS is disabled. In order for the application to work properly, you need to enable GPS on your device.</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="device_not_supported">This device is not supported.</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="degrees" translatable="false">16°</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="wbgt_model_temp" translatable="false">WBGT (temporary)</string>
    <string name="alert_header_text">Alert</string>
    <string name="RALColorCodeArea">Showing color code</string>
    <string name="explore_text_header">Input your custom coordinates</string>
    <string name="explore_lon">Longitude</string>
    <string name="explore_lat">Latitude</string>
    <string name="explore">Explore</string>
    <string name="Age">Age</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Gender">Gender</string>
    <string name="Acclimatization">Acclimatization</string>
    <string name="Input_age">Input date of birth (DDMMYYYY)</string>
    <string name="Input_gender">Input gender</string>
    <string name="Input_height">Input height</string>
    <string name="Input_weight">Input weight</string>
    <string name="Input_acclimatization">Select acclimatization</string>
    <string name="Input_unit">Select unit</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="set_age_button">Set age</string>
    <string name="wrong_age">Incorrect input format or age. Should be on form DDMMYYYY with age between 18 to 120. Try again.</string>
    <string name="db_error">Error when updating user values in database</string>
    <string name="feedback_thanks">Thank you for sharing your feedback!</string>
    <string name="age_unit">Years</string>
    <string name="height_unit_si">Meters</string>
    <string name="height_unit_uk" translatable="false">Feet/inches</string>
    <string name="height_unit_us" translatable="false">Feet/inches</string>
    <string name="weight_unit_si" translatable="false">Kg</string>
    <string name="weight_unit_uk">Stones</string>
    <string name="weight_unit_us">Pounds</string>
    <string name="temperature_unit_f" translatable="false">Fahrenheit</string>
    <string name="temperature_unit_c" translatable="false">Celcius</string>
    <string-array name="units_array">
        <item>SI units (kg, m, °C)</item>
        <item>US (pound, feet/inches, °F)</item>
        <item>UK (stone, feet/inches, °C)</item>
    </string-array>
    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
        <string-array name="frequency_array">
            <item>Workdays 6AM</item>
            <item>Daily 6AM</item>
            <item>Workdays 7AM</item>
            <item>Daily 7AM</item>
            <item>Off</item>
            <item>Custom..</item>
        </string-array>
    <string name="action_settings">Settings</string>
    <string name="Personal_Settings">Personal settings</string>
    <string name="Notifications">Notifications</string>
    <string name="Preferences">Preferences</string>
    <string name="Other">Other</string>
    <string name="About">About</string>
    <string name="Feedback">Feedback</string>
    <string name="Reset">Reset personal preferences</string>
    <string name="prefs_cleared">Personal preferences cleared</string>
    <string name="measuring_units">Measuring units</string>
    <string name="units">Units</string>
    <string name="unit">Unit</string>
    <string name="choose_units">Choose units</string>
    <string name="choose_gender">Choose gender</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">This application is still under development and several new features will be implemented over the course of the next two years. Therefore all users should be informed frequent updates and changes to the layout and content might occur.\n\nERA4CS and its partners assume no responsibility or liability for any
        errors or omissions in the content of this application. The information contained in this app
        is provided on an “as is” basis with no guarantees of completeness, accuracy, usefulness
        or timeliness.</string>
    <string name="what_climapp">What is the ERA4CS ClimApp project?</string>
    <string name="era4cs_text">Read more on the official website: <a href="http://www.jpi-climate.eu/nl/25223441-ClimApp.html">http://www.jpi-climate.eu/nl/</a></string>
    <string name="age_updated">Age updated to: </string>
    <string name="weight_updated">Weight updated to:</string>
    <string name="height_updated">Height updated to:</string>
    <string name="acclimatization_true">Acclimatizatized to work environment</string>
    <string name="acclimatization_false">Not acclimatizatized to work environment</string>
    <string name="explore_true">Explore mode on</string>
    <string name="explore_false">Explore mode off</string>
    <string name="user_height" translatable="false">150</string>
    <string name="female_checked" translatable="false">Female checked</string>
    <string name="male_checked" translatable="false">Male checked</string>
    <string name="height_boundaries">Height should be within human boundaries, separated by punctuation like: 1.80 (meters).</string>
</resources>