<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/activity_level_very_low"
                style="@style/SmallDescriptiveTextStyle"/>
            <TextView
                android:text="@string/activity_very_low_text"
                style="@style/SettingsTextStyleNoCaps"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey"/>
            <TextView
                android:text="@string/activity_level_low"
                style="@style/SmallDescriptiveTextStyle"/>
            <TextView
                android:text="@string/activity_low_text"
                style="@style/SettingsTextStyleNoCaps"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey"/>
            <TextView
                android:text="@string/activity_level_medium"
                style="@style/SmallDescriptiveTextStyle"/>
            <TextView
                android:text="@string/activity_medium_text"
                style="@style/SettingsTextStyleNoCaps"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey"/>
            <TextView
                android:text="@string/activity_level_high"
                style="@style/SmallDescriptiveTextStyle"/>
            <TextView
                android:text="@string/activity_very_high_text"
                style="@style/SettingsTextStyleNoCaps"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey"/>
            <TextView
                android:text="@string/activity_level_very_high"
                style="@style/SmallDescriptiveTextStyle"/>
            <TextView
                android:text="@string/activity_high_text"
                style="@style/SettingsTextStyleNoCaps"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>