<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Personal_Settings"
                android:layout_margin="16dp"
                android:textSize="10dp"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/age_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Age"
                android:layout_margin="16dp" />
            <TextView
                android:id="@+id/gender_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:layout_margin="16dp" />
            <TextView
                android:id="@+id/weight_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Weight"
                android:layout_margin="16dp" />
            <TextView
                android:id="@+id/height_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Height"
                android:layout_margin="16dp" />
            <TextView
                android:id="@+id/fitness_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FitnessLevel"
                android:layout_margin="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Preferences"
                android:layout_margin="16dp"
                android:textSize="10dp"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Notifications"
                android:layout_margin="16dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>