<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/Personal_Settings"
                style="@style/SmallDescriptiveTextStyle"/>
            <TextView
                style="@style/SettingsTextStyleNoBottom"
                android:id="@+id/age_settings"
                android:text="@string/Age" />
            <TextView
                style="@style/ValueUnderSettingStyle"
                android:id="@+id/show_age"
                android:text="@string/no_text" />
            <TextView
                android:id="@+id/height_settings"
                android:text="@string/Height"
                style="@style/SettingsTextStyleNoBottom"/>
            <TextView
                style="@style/ValueUnderSettingStyle"
                android:id="@+id/show_height"
                android:text="@string/no_text" />
            <TextView
                android:id="@+id/weight_settings"
                android:text="@string/Weight"
                style="@style/SettingsTextStyleNoBottom"/>
            <TextView
                style="@style/ValueUnderSettingStyle"
                android:id="@+id/show_weight"
                android:text="@string/no_text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/gender_settings"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender"
                    style="@style/SettingsTextStyleNoCaps"/>
                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/gender_spinner"
                    android:layout_margin="16dp"
                    android:entries="@array/gender_array">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:id="@+id/acclimatization"
                    android:text="@string/Acclimatization"
                    style="@style/SettingsTextStyleNoCaps"/>
                <Switch
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="20dp"
                    android:id="@+id/acclimatization_switch_settings"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey"/>
            <TextView
                android:text="@string/Preferences"
                style="@style/SmallDescriptiveTextStyle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">
                <TextView
                    android:id="@+id/notifications"
                    android:text="@string/Notifications"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    style="@style/SettingsTextStyleNoCaps"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/notification_spinner"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:entries="@array/frequency_array">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/units"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/measuring_units"
                    style="@style/SettingsTextStyleNoCaps"/>
                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:id="@+id/units_spinner"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:entries="@array/units_array">
                </Spinner>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey"/>
            <TextView
                android:text="@string/Other"
                style="@style/SmallDescriptiveTextStyle"/>
            <TextView
                android:id="@+id/reset"
                android:text="@string/Reset"
                style="@style/SettingsTextStyleNoCaps"/>
            <TextView
                android:id="@+id/about"
                android:text="@string/About"
                style="@style/SettingsTextStyleNoCaps"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>