<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/what_climapp"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/era4cs_link"
                android:layout_marginTop="12dp"
                android:text="@string/era4cs_text"
                style="@style/SettingsTextStyleNoCaps"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:text="@string/disclaimer"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/disclaimer_text"
                style="@style/SettingsTextStyleNoCaps"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="App version: 0.10"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>