<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_text"
        android:src="@mipmap/climapp_logo3"
        android:layout_margin="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/before_set_up"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimaryDark"/>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:layout_margin="40dp">
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/justification"
                android:textSize="18dp"
                android:layout_margin="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climapp_team"
                android:textStyle="italic"
                android:layout_gravity="right"
                android:textSize="18dp"
                android:layout_margin="16dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>